--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "npm": "^5.7.1",
+        "vuetify": "^1.0.8"
     }
 }
